--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,37 @@
-.App {
+.divElement{
+  width: 300px;
+  height: 250px;
+  background-color: black;
+  text-align: center;
+  margin-left: 650px;
+  margin-top: 250px;
+  border-radius: 10px;
+}
+.para{
+  color: white;
+  padding-top: 25px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 30px;
+}
+.para-1{
+  color: white;
+  font-size: 25px;
+}
+button{
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 10px;
+  margin: 5px;
+}
+
+
+/* .heading{
+  color: blue;
+} */
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +68,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
