--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,17 @@
-.divElement{
-  width: 300px;
-  height: 250px;
-  background-color: black;
-  text-align: center;
-  margin-left: 650px;
-  margin-top: 250px;
-  border-radius: 10px;
+body{
+  background-color: lightgray;
 }
-.para{
-  color: white;
-  padding-top: 25px;
+#destinationNames, h1, h4, #header{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 30px;
 }
-.para-1{
-  color: white;
-  font-size: 25px;
+.desination-Card{
+  width: 400px;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 20px auto;
 }
-button{
-  width: 100px;
-  height: 50px;
-  font-size: 20px;
-  border-radius: 10px;
-  margin: 5px;
+#img-Card{
+  width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
