--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,65 @@
 body{
-  background-color: lightgray;
+  background-color: navajowhite;
 }
-#destinationNames, h1, h4, #header{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+h1{
+  margin-top: 30px;
+  text-align: center;
+  color: blue;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  perspective: 800px;
+  font-size: 3em;
+  color: #333;
+  position: relative;
+  transform-style: preserve-3d;
+  animation: rotateY 5s infinite linear;
 }
-.desination-Card{
-  width: 400px;
-  border: 2px solid black;
-  border-radius: 5px;
-  margin: 20px auto;
+@keyframes rotateY {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
-#img-Card{
+#inputValue{
+  border: none;
+  margin-top: 20px;
+  text-align: center;
+  width: 50%;
+  height: 30px;
+  margin-left: 350px;
+  border-radius: 20px;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+#inputValue::placeholder {
+  color: #999;
+}
+#movie-wrapper{
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px;
+  font-family: 'Times New Roman', Times, serif;
+}
+.movieCard{
+  text-align: center;
+  padding: 10px;
+  margin: 15px;
+  width: calc(25% - 32px);
+}
+.movieCard:hover{
+  cursor: pointer;
+}
+.movieCard {
+  transition: transform 0.3s ease-in-out;
+}
+.movieCard:hover {
+  transform: scale(1.1); 
+}
+
+.movie-thumbnail{
   width: 100%;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  height: 250px;
 }
