--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,20 @@
-body{
-  background-color: navajowhite;
-}
-h1{
-  margin-top: 30px;
+#timer{
   text-align: center;
-  color: blue;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  perspective: 800px;
-  font-size: 3em;
-  color: #333;
-  position: relative;
-  transform-style: preserve-3d;
-  animation: rotateY 5s infinite linear;
-}
-@keyframes rotateY {
-  0% {
-    transform: rotateY(0);
-  }
-  100% {
-    transform: rotateY(360deg);
-  }
-}
-#inputValue{
-  border: none;
-  margin-top: 20px;
-  text-align: center;
-  width: 50%;
-  height: 30px;
-  margin-left: 350px;
-  border-radius: 20px;
-  transition: border-color 0.3s, box-shadow 0.3s;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-}
-#inputValue::placeholder {
-  color: #999;
-}
-#movie-wrapper{
-  width: 80%;
-  margin: 30px auto;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 15px;
-  font-family: 'Times New Roman', Times, serif;
-}
-.movieCard{
-  text-align: center;
+  background-color: gray;
+  width: 30%;
   padding: 10px;
-  margin: 15px;
-  width: calc(25% - 32px);
+  margin: 200px auto;
+  color: black;
+  border-radius: 10px;
 }
-.movieCard:hover{
-  cursor: pointer;
+button{
+  width: 100px;
+  margin: 10px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
 }
-.movieCard {
-  transition: transform 0.3s ease-in-out;
-}
-.movieCard:hover {
-  transform: scale(1.1); 
-}
-
-.movie-thumbnail{
-  width: 100%;
-  height: 250px;
+#b11:disabled{
+  opacity: 0.7;
+  cursor: not-allowed;
 }
